--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+:root {
+  --body-color: #fb584a;
+  --base-font-color: #fff;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -6,17 +11,28 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: var(--body-color);
+  color: var(--base-font-color);
+  font-family: "anonymous-pro", monospace;
+  font-weight: 400;
+  font-style: normal;
 }
 
 /* Reset default styles for heading elements */
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
   padding: 0;
   font-weight: normal;
 }
 
 /* Reset default styles for list elements */
-ul, ol {
+ul,
+ol {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -29,7 +45,10 @@ table {
 }
 
 /* Reset default styles for form elements */
-button, input, select, textarea {
+button,
+input,
+select,
+textarea {
   margin: 0;
   padding: 0;
   font-size: 100%;
@@ -38,7 +57,8 @@ button, input, select, textarea {
 }
 
 /* Reset default styles for form elements */
-button, input {
+button,
+input {
   line-height: normal;
 }
 
