--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,11 @@ html {
   font-size: 62.5%;
 }
 
-
+.wrapper {
+  max-width: 1440px;
+  display: flex;
+  margin: auto;
+}
 * {
   box-sizing: border-box;
 }
