--- a/src/components/BlogPreview/blogPreview.scss
+++ b/src/components/BlogPreview/blogPreview.scss
@@ -8,15 +8,38 @@
     margin: auto;
 }
 
+.card__number {
+    font-size: 2rem;
+}
+
 .blog__preview__card {
     background-color: #F04B38;
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
     padding: 2rem;
+
+    h4 {
+        font-size: 3rem;
+        margin-bottom: 1rem;
+    }
+
+    p {
+        font-size: 2rem;
+    }
 }
 
 .card__image img {
-  max-width: 100%;
-  height: auto;
+    width: 100%;
+    height: 300px;
+    border: 5px solid white;
+    margin: 2rem 0 1rem 0;
+    border-radius: 1rem;
+}
+
+.card__content h4 {
+    width: 300px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
