read more button

--- a/src/components/BlogPreview/blogPreview.scss
+++ b/src/components/BlogPreview/blogPreview.scss
@@ -5,11 +5,18 @@
     gap: 2rem;
     justify-content: center;
     width: 100%;
-    margin: auto;
+    margin: 2rem auto;
 }
 
 .card__number {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.card__date {
     font-size: 2rem;
+    color: var(--yello);
+    font-weight: bold;
 }
 
 .blog__preview__card {
@@ -18,6 +25,7 @@
     display: flex;
     flex-direction: column;
     padding: 2rem;
+    position: relative;
 
     h4 {
         font-size: 3rem;
@@ -32,14 +40,76 @@
 .card__image img {
     width: 100%;
     height: 300px;
-    border: 5px solid white;
+    border: 10px solid white;
     margin: 2rem 0 1rem 0;
     border-radius: 1rem;
 }
 
-.card__content h4 {
-    width: 300px;
+
+.card__content {
+    margin-bottom: 2rem;
+
+    h4 {
+        width: 300px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
+    p {
+        font-size: 2rem;
+    }
+}
+
+
+
+/* CSS */
+.button-30 {
+    font-size: 1.2rem;
+    color: var(--body-color);
+    width: 50%;
+    align-items: center;
+    appearance: none;
+    background-color: #FCFCFD;
+    border-radius: 4px;
+    border-width: 0;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    box-sizing: border-box;
+    cursor: pointer;
+    display: inline-flex;
+    font-family: "JetBrains Mono", monospace;
+    height: 48px;
+    justify-content: center;
+    line-height: 1;
+    list-style: none;
     overflow: hidden;
-    text-overflow: ellipsis;
+    padding-left: 16px;
+    padding-right: 16px;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    transition: box-shadow .15s, transform .15s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
     white-space: nowrap;
+    will-change: box-shadow, transform;
+    position: absolute;
+    bottom: -20px;
+    left: 30px;
+    text-align: left;
+}
+
+.button-30:focus {
+    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+
+.button-30:hover {
+    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    transform: translateY(-2px);
+}
+
+.button-30:active {
+    box-shadow: #D6D6E7 0 3px 7px inset;
+    transform: translateY(2px);
 }
