--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ h5,
 h6 {
   margin: 0;
   padding: 0;
-  font-weight: normal;
+  font-weight: 700;
 }
 
 /* Reset default styles for list elements */
