--- a/src/components/BlogPreview/blogPreview.scss
+++ b/src/components/BlogPreview/blogPreview.scss
@@ -26,6 +26,7 @@
     flex-direction: column;
     padding: 2rem;
     position: relative;
+    cursor: pointer;
 
     h4 {
         font-size: 3rem;
@@ -73,7 +74,7 @@
     background-color: #FCFCFD;
     border-radius: 4px;
     border-width: 0;
-    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+    box-shadow: rgb(229 57 76 / 40%) 0 2px 4px, rgb(199 25 66 / 30%) 0 7px 13px -3px, #d9bcbc 0 -3px 0 inset;
     box-sizing: border-box;
     cursor: pointer;
     display: inline-flex;
@@ -113,3 +114,4 @@
     box-shadow: #D6D6E7 0 3px 7px inset;
     transform: translateY(2px);
 }
+
